--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,20 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #4771c4;
+  min-height: 10vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 0px 12px 0px;
 }
-
+h3 {
+  font-weight: 500;
+}
+.search {
+  height: 30px;
+}
 .App-link {
   color: #61dafb;
 }
